--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,8 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^11.0.0",
+        "@angular/animations": "^11.2.14",
+        "@angular/cdk": "^12.2.0",
         "@angular/common": "^11.0.0",
         "@angular/compiler": "^11.0.0",
         "@angular/core": "^11.0.0",
@@ -38,6 +39,11 @@
         "@angular/platform-browser-dynamic": "^11.0.0",
         "@angular/router": "^11.0.0",
         "@nrwl/angular": "11.1.5",
+        "bootstrap": "^5.0.0-beta3",
+        "normalize.css": "^8.0.1",
+        "primeflex": "^3.0.1",
+        "primeicons": "^4.1.0",
+        "primeng": "^11.3.0-rc.1",
         "rxjs": "~6.5.5",
         "tslib": "^2.0.0",
         "zone.js": "^0.10.2"
@@ -50,12 +56,12 @@
         "@angular/cli": "~11.0.0",
         "@angular/compiler-cli": "^11.0.0",
         "@angular/language-service": "^11.0.0",
-        "@nrwl/cli": "11.1.5",
+        "@nrwl/cli": "^12.6.4",
         "@nrwl/cypress": "11.1.5",
         "@nrwl/eslint-plugin-nx": "11.1.5",
         "@nrwl/jest": "11.1.5",
-        "@nrwl/tao": "11.1.5",
-        "@nrwl/workspace": "11.1.5",
+        "@nrwl/tao": "^12.6.4",
+        "@nrwl/workspace": "^12.6.4",
         "@types/jest": "26.0.8",
         "@types/node": "12.12.38",
         "@typescript-eslint/eslint-plugin": "4.3.0",
