--- a/frontend/tsconfig.base.json
+++ b/frontend/tsconfig.base.json
@@ -18,7 +18,8 @@
             "@bluebits/ui": ["libs/ui/src/index.ts"],
             "@bluebits/products": ["libs/products/src/index.ts"],
             "@bluebits/users": ["libs/users/src/index.ts"],
-            "@bluebits/orders": ["libs/orders/src/index.ts"]
+            "@bluebits/orders": ["libs/orders/src/index.ts"],
+            "@evn/*" : ["environments/*"]
         }
     },
     "exclude": ["node_modules", "tmp"]
