--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
         "primeflex": "^3.0.1",
         "primeicons": "^4.1.0",
         "primeng": "^11.3.0-rc.1",
+        "quill": "^1.3.7",
         "rxjs": "~6.5.5",
         "tslib": "^2.0.0",
         "zone.js": "^0.10.2"
