--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
         "@angular/router": "^11.0.0",
         "@nrwl/angular": "11.1.5",
         "bootstrap": "^5.0.0-beta3",
+        "i18n-iso-countries": "^6.8.0",
         "normalize.css": "^8.0.1",
         "primeflex": "^3.0.1",
         "primeicons": "^4.1.0",
