--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
         "@angular/platform-browser-dynamic": "^11.0.0",
         "@angular/router": "^11.0.0",
         "@nrwl/angular": "11.1.5",
+        "animate.css": "^4.1.1",
         "bootstrap": "^5.0.0-beta3",
         "i18n-iso-countries": "^6.8.0",
         "normalize.css": "^8.0.1",
