--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 API_URL = /api/v1
-secret = my-dog-is-nice
+secret = sang
 CONNECTION_STRING = mongodb+srv://admin:admin@cluster0.u1alo.mongodb.net/eshop-database?retryWrites=true&w=majority
